# UnB_IPI

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: README.md
notebooks/: README.md
src/trabalho1/: __init__.py
src/unb_ipi/: __init__.py
tests/: __init__.py
